# makemore-and-friends

./: README.md
makemore/: Makefile  README.md  pyproject.toml
makemore/src/makemore/: ngram_stat.py
makemore/src/notebooks/: bigram_stat.ipynb  ngram_stat.ipynb
micrograd/: README.md  micrograd.ipynb  pyproject.toml
micrograd/src/micrograd/: engine.py  nn.py  test_engine.py
micrograd/src/micrograd/util/: draw.py  graph.py  test_graph.py
micrograd/src/notebooks/: demo.ipynb  micrograd.ipynb  micrograd_0.ipynb  micrograd_1.ipynb
micrograd/src/scripts/: exp.py
nn/: pyproject.toml
nn/src/notebooks/: nn.ipynb
