[project]
name = "makemore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "torch>=2.9.1",
]

[dependency-groups]
qa = [
    "black[jupyter]>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
]
