[project]
name = "micrograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.9.0",
    "flake8>=7.3.0",
    "graphviz>=0.21",
    "isort>=7.0.0",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "torch>=2.9.0",
]
